# py-build-cmake-editable-pylint

./: README.md
foo-py-build-cmake/: pyproject.toml
foo-py-build-cmake/src-native/: CMakeLists.txt
foo-setuptools/: pyproject.toml  test.py
foo-setuptools/src/foo/bar/: __init__.py
